# graph-generation-language

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE  NIX_SETUP.md  README.md  debug_test.rs  flake.nix  justfile  release-plz.toml  shell.nix
.github/workflows/: ci-nix.yml  ci.yml  extension_cicd.yml  release.yaml  release.yml  rust_ci.yml  rustdocs.yml
docs/: Makefile  README.md
docs/source/: api-reference.rst  conf.py  contributing.rst  examples.rst  generators.rst  getting-started.rst  index.rst  language-reference.rst  transformation-rules.rst
docs/source/_static/: custom.css
examples/basic/: Cargo.toml  Trunk.toml  index.html
examples/trunk/: README.md  Trunk.toml  index.html
examples/trunk/src/: lib.rs
ggl-language-server/: Cargo.toml
ggl-language-server/src/: main.rs
ggl-vscode-extension/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
ggl-vscode-extension/src/: extension.ts
ggl-vscode-extension/syntaxes/: ggl.tmLanguage.json
nix/modules/: devshell.nix  pre-commit.nix  rust.nix  template.nix
src/: generators.rs  ggl.pest  lib.rs  main.rs  parser.rs  rules.rs  types.rs
tests/: generator_tests.rs  integration_tests.rs  parser_tests.rs  rule_tests.rs
