[package]
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
edition = "2021"
name = "graph_generation_language"
description = "A domain-specific language for creating and manipulating graphs through declarative syntax."
version = "0.0.1"
license = "MIT"
repository = "https://github.com/ocasazza/graph-generation-language"
homepage = "https://ocasazza.github.io/graph-generation-language/"
documentation = "https://ocasazza.github.io/graph-generation-language/"
readme = "README.md"
keywords = ["nix", "documentation", "rust"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.8"
pest_derive = "2.8"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
console_error_panic_hook = "0.1"
