[package]
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
edition = "2021"
name = "graph_generation_language"
description = "A domain-specific language for creating and manipulating graphs through declarative syntax."
version = "0.0.1"
license = "MIT"
repository = "https://github.com/ocasazza/graph-generation-language"
homepage = "https://ocasazza.github.io/graph-generation-language/"
documentation = "https://ocasazza.github.io/graph-generation-language/"
readme = "README.md"
keywords = ["graph", "dsl", "wasm", "javascript", "typescript"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ggl"
path = "src/main.rs"


# WASM-specific package metadata
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[features]
default = []
wasm = [
  "wasm-bindgen",
  "js-sys",
  "web-sys",
  "console_error_panic_hook",
  "wee_alloc",
]

[dependencies]
# Core dependencies (always included)
clap = { version = "4.3.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.8"
pest_derive = "2.8"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }

# WASM-specific dependencies (optional)
wasm-bindgen = { version = "0.2", features = [
  "serde-serialize",
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Text",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
