[package]
name = "ggl-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20" # Removed "proposed" features
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5" # For concurrent hash map to store document states

# Dependencies for Pest parsing
pest = "2.7"
pest_derive = "2.7"

[workspace]
# This can be useful if you have multiple Rust crates in the same repo,
# but might not be strictly necessary if the main project isn't also Rust.
# For now, let's assume it's standalone but can access sibling directories.
# If your main GGL interpreter is also a Rust project in this repo, we'd adjust this.
